# ladspa.m.proto

./: CMakeLists.txt  README.md  example.py  example_instrument.py  generate_examples.py  generate_examples.sh  ladspa.m.proto.pc.in  ladspam.proto  ladspam.proto.in  ladspam_pb2_util.py  ladspam_pb2_util.py.in  makefile  setup.py
cmake-modules/: FindProtocolBuffers.cmake
examples.pb/: simple_sawtooth.instrument.pb  simple_sawtooth_autopanned.instrument.pb
examples.py/: bandpass_distortion_bandpass.instrument.py  kick001.py  multibandpass_distortion1.py  multibandpass_distortion2.py  multibandpass_vary.py  simple_sawtooth.instrument.py  simple_sawtooth_autopanned.instrument.py
